# audio_data_modem_last_one_was_destoryed

./: README.md  REPORT.docx
gr-our_modem/: CMakeLists.txt  MANIFEST.md  audio_to_text.grc  audio_to_text.py  data.npy  file_to_send.md  modem.grc  modem.py  new_file_to_send.md  receiver.grc  text_to_audio.grc  text_to_audio.py  transmitter.grc  transmitter.py  withoutpreamble.npy  withpreamble.npy
gr-our_modem/.conda/: README.md
gr-our_modem/.conda/recipe/: meta.yaml
gr-our_modem/apps/: CMakeLists.txt
gr-our_modem/cmake/Modules/: gnuradio-our_modemConfig.cmake
gr-our_modem/docs/: CMakeLists.txt  README.our_modem
gr-our_modem/docs/doxygen/: CMakeLists.txt  Doxyfile.in
gr-our_modem/docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
gr-our_modem/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-our_modem/grc/: CMakeLists.txt  our_modem_postprocessor.block.yml  our_modem_preprocess.block.yml
gr-our_modem/include/gnuradio/our_modem/: CMakeLists.txt  api.h
gr-our_modem/lib/: CMakeLists.txt
gr-our_modem/python/our_modem/: CMakeLists.txt  __init__.py  postprocessor.py  preprocess.py  read_np_file.py
gr-our_modem/python/our_modem/bindings/: CMakeLists.txt  python_bindings.cc
